test/bad/modules/use07.px

if true do
    use math

print E
